environments/gloo-mesh-core/east-region-ambient/online-boutique-app/base/backend-apis-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-apis
  labels:
    istio.io/dataplane-mode: ambient
