environments/gloo-mesh-core/east-region-ambient/online-boutique-app/base/web-ui-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ui
  labels:
    istio.io/dataplane-mode: ambient
