environments/gloo-mesh-core/east-region-ambient/online-boutique-app/base/bombardier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bombardier
  name: bombardier
  namespace: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bombardier
  template:
    metadata:
      labels:
        app: bombardier
    spec:
      nodeSelector:
        node: "spot"
      tolerations:
      - key: cloud.google.com/node
        operator: Equal
        value: "spot"
        effect: NoSchedule
      containers:
      - name: bombardier
        image: alpine/bombardier:v1.2.5
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        resources:
            requests:
              cpu: 20m
              memory: 25Mi
        args: ["-c", "for run in $(seq 1 100000); do bombardier -c 5 -d 60s -r 1 -p i,p,r https://ambient.gmc.glooplatform.com; done"]
