environments/gloo-mesh-core/east-region-ambient/online-boutique-app/base/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: web-ui
spec:
  selector:
    matchLabels:
      app: loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      nodeSelector:
        node: "spot"
      tolerations:
      - key: cloud.google.com/node
        operator: Equal
        value: "spot"
        effect: NoSchedule
      serviceAccountName: loadgenerator
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.3.5
        resources:
          requests:
            cpu: 30m
            memory: 50Mi
---

apiVersion: v1
kind: Service
metadata:
  name: loadgenerator
  namespace: web-ui
  labels:
    app: loadgenerator
spec:
  type: ClusterIP
  selector:
    app: loadgenerator
  ports:
  - name: http
    port: 80
    targetPort: 8080
